# 3DAirHockey

./: CMakeLists.txt  README.md  package.xml
launch/: 3dairhockey.launch  gazebo_simulation.launch  hand_tracking.launch
models/: bouncing_object.world
rviz/: hand_tracking.rviz
scripts/: hand_tracking_node.py
src/: bouncing_object_control.cpp
urdf/: simulation_space.urdf
